# My_String

./: .gitignore  Jenkinsfile  README.md  sonar-project.properties
Exercise/: CMakeLists.txt
Exercise/CMakeModules/: CodeCoverage.cmake
Exercise/include/: my_string.h
Exercise/src/: main.cpp  my_string.cpp  tests.cpp
